public/assets/css/style.css
/* All of my variables that I apply throughout the stylesheet for consistent code. */
:root {
    --darknavy: #1D116D;
    --darkblue: #00429B;
    --blue: #006CB8;
    --midblue: #0093C3;
    --turqoise: #00B9C4;
    --lightblue: #41DDC1;
    --transparent-black: rgba(0, 0, 0, 0.5);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background: 
    linear-gradient(#1D116D, #00429B, #006CB8, #0093C3, #00B9C4, #41DDC1);
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
    font-family: 'Fjalla One', sans-serif;
}

header {
    color: white;
    background-color: var(--transparent-black);
    width: 100vw;
}

section {
    transition: all 1s ease-in-out;
}

footer {
    background-color: var(--transparent-black);
    padding: 0 2rem;
}

i {
    font-size: xx-large;
}

footer i {
    font-size: 1rem;
   }
  

#full-stack {
    font-size: .9rem;
}

#dream {
    color: var(--midblue);
}

#develop {
    color: var(--turqoise);
}

#create {
    color: var(--lightblue);
}

#homeIcon,
#aboutMeIcon,
#projectsIcon,
#resumeIcon  {
        display: none;
    }

#resumeBtn a, 
#resumeIcon a {
    text-decoration: none;
    color: white;
}

#img-container {
    overflow: hidden;
    display: fit-content;
}

#profile-pic {
    object-fit: cover;
    object-position: -110px;
}

#copyright {
    margin-left: auto;
}

.tinted-image:before {
    content: "";
    display: block;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: linear-gradient(
       rgba(0, 0, 0, 0.45), 
       rgba(0, 0, 0, 0.45)
    );
  }

.hide {
    display: none !important;
}

.trans {
    visibility: hidden;
    opacity: 0;
    max-height: 0% !important;
    margin-top: 100px;
}


@media screen and (max-width: 768px) {
    nav {
        justify-content: space-evenly;
    }

    #homeBtn,
    #aboutMeBtn,
    #projectsBtn,
    #resumeBtn  {
        display: none;
    }

    #homeIcon,
    #aboutMeIcon,
    #projectsIcon,
    #resumeIcon  {
        display: inherit;
        padding: 0 0 0.9rem 0;
    }

    #img-container {
        margin: 10px;
    }

    #about-me-container {
        margin-bottom: 45px;
    }
}

